# droidtui

./: ASYNC_FEATURES.md  CHANGELOG.md  COLOR_EFFECTS.md  Cargo.toml  ELM_ARCHITECTURE.md  FEATURES.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_REFERENCE.md  QUICK_RELEASE.md  README.md  RELEASE.md  SCROLLING_FEATURE.md  STREAMING.md  STREAMING_DEMO.md  STREAMING_QUICKSTART.md  WIDE_CONTENT_FIX.md  cliff.toml  justfile  run.sh  test_long_output.sh  test_wide_output.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  update-readme.yml
examples/: README.md  device_info.rs  main_menu.rs  package_manager.rs  streaming.rs
examples/vhs/: .gitignore  README.md  all_examples.tape  device_info.tape  features_highlight.tape  full_demo.tape  generate_all.sh  main_menu.tape  navigation_showcase.tape  package_manager.tape  quickstart.tape  streaming.tape
scripts/: bump_version.sh  demo.sh
src/: adb.rs  app.rs  effects.rs  event.rs  lib.rs  main.rs  menu.rs  message.rs  model.rs  stream.rs  ui.rs  update.rs  view.rs
tests/: adb_integration_tests.rs
