[package]
name = "droidtui"
version = "0.1.0"
description = "A comand line TUI for Android device and build commands toolkit."
authors = ["Sorin Albu-Irimies <mihaiirimies@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
tachyonfx = "0.7.0"
