[package]
name = "droidtui"
version = "0.2.6"
description = "A beautiful Terminal User Interface (TUI) for Android development and ADB commands"
authors = ["Sorin Albu-Irimies <mihaiirimies@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/sorinirimies/droidtui"
homepage = "https://github.com/sorinirimies/droidtui"
documentation = "https://docs.rs/droidtui"
keywords = ["android", "adb", "tui", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "droidtui"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
tachyonfx = "0.7.0"
